syntax = "proto3";

option go_package = "grpc.hello/proto";
option java_multiple_files = true;
option java_package = "com.anchnet.grpc.proto";
option java_outer_classname = "HelloProto";

package hello;

// The greeting service definition.
service Hello {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}